--- a/index.liquid
+++ b/index.liquid
@@ -1,7 +1,30 @@
 ---
 layout: layout.liquid
-title: 11ty Boilerplate
+title: Nova Pilgrim - Home
 ---
 
-<h1>Yet Another 11ty <strong>Boilerplate</strong></h1>
-<img alt="pine" src="/images/pine.png" width="50" />
+<div class="welcome">
+    <h2>Welcome to Nova Pilgrim</h2>
+    <p>Come along as I explore distant worlds in search of a new home.</p>
+</div>
+
+<div class="blog-tiles">
+    <div class="blog-tile">
+        <a href="/blog/post2/">
+            <img src="/images/Post1.png" alt="Footsteps on Another World">
+            <h3>Footsteps on Another World</h3>
+            <p>I step onto Eos-3 and breathe unfiltered air for the first time in years. 
+            The sky is strange, the ground unfamiliar—but it might be home. Maybe this is where humanity begins again. 
+            Maybe this is what I was meant to find.</p>
+        </a>
+    </div>
+
+    <div class="blog-tile">
+        <a href="/blog/post1/">
+            <img src="/images/Post2.png" alt="A New Earth, Somewhere">
+            <h3>A New Earth, Somewhere</h3>
+            <p>Earth is fading, and I may be the only one still searching for a second chance. 
+            A system ahead holds promise—a planet where humans might walk again. Hope is a fragile thing, but it’s all I have</p>
+        </a>
+    </div>
+</div>
