--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -1,5 +1,5 @@
 ---
-title: 11ty Boilerplate
+title: Nova Pilgrim
 ---
 
 <!DOCTYPE html>
@@ -11,12 +11,20 @@ title: 11ty Boilerplate
   <link rel="stylesheet" href="/styles/screen.css">
 </head>
 <body>
+  <div class="header-container">
+        <h1>Nova Pilgrim</h1>
+  </div>
+  <div class="divider"></div>
   <nav>
     <ul>
-      <li><a href="/" title="Go home">Home</a></li>
-      <li><a href="/about/" title="About the boilerplate">About</a></li>
+        <li><a href="/" title="Home">Home</a></li>
+        <li><a href="/about/" title="About the Pilgrim">About</a></li>
+        <li><a href="/blog/post2/" title="Footsteps on Another World">New Post</a></li>
+        <li><a href="/blog/post1/" title="A New Earth, Somewhere">Older Post</a></li>
     </ul>
   </nav>
-    {{ content }}
+    <div class="{{ class | default: '' }}">
+        {{ content }}
+    </div>
 </body>
 </html>
